# rogets_thesaurus

./: README.md  cls_embed.ipynb  clust_embed.ipynb  cluster_matching.py  explore.ipynb  final.ipynb  gutenberg.ipynb  hierarchy.json  pyproject.toml  scrapping.ipynb  solution.ipynb
rogets_thesaurus/: cls_embed.ipynb  scrapping_full_thesaurus.ipynb
