[tool.poetry]
name = "rogets-thesaurus"
version = "0.1.0"
description = ""
authors = ["Panagiotis Spanakis <t8200158@aueb.gr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
catboost = "^1.2.3"
chromadb = "^0.4.23"
k-means-constrained = "^0.7.3"
keras = "^3.0.5"
langchain-community = "^0.0.24"
langchain-core = "^0.1.26"
matplotlib = "^3.8.3"
nomic = "^3.0.13"
numpy = "^1.26.4"
optuna = "^3.5.0"
pandas = "^2.2.1"
requests = "^2.31.0"
scikit-learn = "^1.4.1.post1"
tensorflow = "^2.15.0.post1"
tensorflow-docs = "^2023.5.24.56664"
tensorflow-intel = "^2.15.0"
torch = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
